--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                   srcset="./images/bankapp-mb@2x.jpg 2x"
                   src="./images/bankapp-mb.jpg"
                   alt="Interface Banking App"
-                  width="100%"
+                  class="portfolio-img"
                 />
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -358,7 +358,7 @@
                   srcset="./images/payment-mb@2x.jpg 2x"
                   src="./images/payment-mb.jpg"
                   alt="Scaning QRCode"
-                  width="100%"
+                  class="portfolio-img"
                 />
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -378,7 +378,7 @@
                   srcset="./images/meditation-mb@2x.jpg 2x"
                   src="./images/meditation-mb.jpg"
                   alt="Laptop and phone with Meditation App"
-                  width="100%"
+                  class="portfolio-img"
                 />
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -398,7 +398,7 @@
                   srcset="./images/taxi-mb@2x.jpg 2x"
                   src="./images/taxi-mb.jpg"
                   alt="Driver use Taxi Service"
-                  width="100%"
+                  class="portfolio-img"
                 />
 
                 <p class="overlay">
@@ -419,7 +419,7 @@
                   srcset="./images/screen-mb@2x.jpg 2x"
                   src="./images/screen-mb.jpg"
                   alt="Beautiful background for phones"
-                  width="100%"
+                  class="portfolio-img"
                 />
 
                 <p class="overlay">
@@ -440,7 +440,7 @@
                   srcset="./images/course-mb@2x.jpg 2x"
                   src="./images/course-mb.jpg"
                   alt="Girl with phone and headphones"
-                  width="100%"
+                  class="portfolio-img"
                 />
 
                 <p class="overlay">
