fix requirements errors

--- a/index.html
+++ b/index.html
@@ -335,8 +335,8 @@
             <li class="portfolio-list">
               <div class="animation-overlay">
                 <img
-                  srcset="./images/bankapp-mb@2x.jpg 2x"
-                  src="./images/bankapp-mb.jpg"
+                  srcset="./images/bankapp@2x.jpg 2x"
+                  src="./images/bankapp.jpg"
                   alt="Interface Banking App"
                   class="portfolio-img"
                 />
@@ -355,8 +355,8 @@
             <li class="portfolio-list">
               <div class="animation-overlay">
                 <img
-                  srcset="./images/payment-mb@2x.jpg 2x"
-                  src="./images/payment-mb.jpg"
+                  srcset="./images/payment@2x.jpg 2x"
+                  src="./images/payment.jpg"
                   alt="Scaning QRCode"
                   class="portfolio-img"
                 />
@@ -375,8 +375,8 @@
             <li class="portfolio-list">
               <div class="animation-overlay">
                 <img
-                  srcset="./images/meditation-mb@2x.jpg 2x"
-                  src="./images/meditation-mb.jpg"
+                  srcset="./images/meditation@2x.jpg 2x"
+                  src="./images/meditation.jpg"
                   alt="Laptop and phone with Meditation App"
                   class="portfolio-img"
                 />
@@ -395,8 +395,8 @@
             <li class="portfolio-list">
               <div class="animation-overlay">
                 <img
-                  srcset="./images/taxi-mb@2x.jpg 2x"
-                  src="./images/taxi-mb.jpg"
+                  srcset="./images/taxi@2x.jpg 2x"
+                  src="./images/taxi.jpg"
                   alt="Driver use Taxi Service"
                   class="portfolio-img"
                 />
@@ -416,8 +416,8 @@
             <li class="portfolio-list">
               <div class="animation-overlay">
                 <img
-                  srcset="./images/screen-mb@2x.jpg 2x"
-                  src="./images/screen-mb.jpg"
+                  srcset="./images/screen@2x.jpg 2x"
+                  src="./images/screen.jpg"
                   alt="Beautiful background for phones"
                   class="portfolio-img"
                 />
@@ -437,8 +437,8 @@
             <li class="portfolio-list">
               <div class="animation-overlay">
                 <img
-                  srcset="./images/course-mb@2x.jpg 2x"
-                  src="./images/course-mb.jpg"
+                  srcset="./images/course@2x.jpg 2x"
+                  src="./images/course.jpg"
                   alt="Girl with phone and headphones"
                   class="portfolio-img"
                 />
@@ -471,7 +471,7 @@
             digital marketing & growth solutions.
           </p>
         </div>
-        <div>
+        <div class="footer-social-apps">
           <p class="text-footer footer-social-icon">Social media</p>
           <ul class="social-icon-list footer-social-list">
             <li class="icon">
@@ -612,74 +612,84 @@
       </div>
     </div>
 
-    <div class="nav-overlay">
-      <button type="button" class="cancel-btn">
-        <svg width="8" height="8" class="cancel">
-          <use href="./images/icons.svg#icon-cancel"></use>
-        </svg>
-      </button>
-      <nav>
-        <ul class="mobile-nav-list">
-          <li class="mobile-nav-item">
-            <a href="./index.html" class="mobile-nav-link"> Studio </a>
+    <div class="mobile-nav">
+      <div class="nav-overlay">
+        <button type="button" class="cancel-btn">
+          <svg width="8" height="8" class="cancel">
+            <use href="./images/icons.svg#icon-cancel"></use>
+          </svg>
+        </button>
+        <nav class="mobile-navigation">
+          <ul class="mobile-nav-list">
+            <li class="mobile-nav-item">
+              <a
+                href="./index.html"
+                class="mobile-nav-link mobile-nav-first-link"
+              >
+                Studio
+              </a>
+            </li>
+            <li class="mobile-nav-item">
+              <a href="" class="mobile-nav-link"> Portfolio </a>
+            </li>
+            <li class="mobile-nav-item">
+              <a href="" class="mobile-nav-link"> Contacts </a>
+            </li>
+          </ul>
+        </nav>
+        <address class="mobile-contact">
+          <ul class="mobile-address-list">
+            <li>
+              <a
+                href="tel:+110001111111"
+                class="mobile-contact-link mobile-first-contact-link"
+              >
+                +11 (000) 111-11-11
+              </a>
+              <br />
+            </li>
+            <li>
+              <a
+                href="mailto:info@devstudio.com"
+                target="_blank"
+                class="mobile-contact-link"
+              >
+                info@devstudio.com
+              </a>
+            </li>
+          </ul>
+        </address>
+        <ul class="social-icon-list mobile-social-list">
+          <li class="icon">
+            <a href="" class="social-link">
+              <svg width="24" height="24" class="social-icon">
+                <use href="./images/icons.svg#icon-instagram-2"></use>
+              </svg>
+            </a>
           </li>
-          <li class="mobile-nav-item">
-            <a href="" class="mobile-nav-link"> Portfolio </a>
+          <li class="icon">
+            <a href="" class="social-link">
+              <svg width="24" height="24" class="social-icon">
+                <use href="./images/icons.svg#icon-twitter-1"></use>
+              </svg>
+            </a>
           </li>
-          <li class="mobile-nav-item">
-            <a href="" class="mobile-nav-link"> Contacts </a>
+          <li class="icon">
+            <a href="" class="social-link">
+              <svg width="24" height="24" class="social-icon">
+                <use href="./images/icons.svg#icon-facebook-1"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="icon">
+            <a href="" class="social-link">
+              <svg width="24" height="24" class="social-icon">
+                <use href="./images/icons.svg#icon-linkedin-1"></use>
+              </svg>
+            </a>
           </li>
         </ul>
-      </nav>
-      <address class="mobile-contact">
-        <ul class="mobile-address-list">
-          <li>
-            <a href="tel:+110001111111" class="mobile-contact-link">
-              +11 (000) 111-11-11
-            </a>
-            <br />
-          </li>
-          <li>
-            <a
-              href="mailto:info@devstudio.com"
-              target="_blank"
-              class="mobile-contact-link"
-            >
-              info@devstudio.com
-            </a>
-          </li>
-        </ul>
-      </address>
-      <ul class="social-icon-list mobile-social-list">
-        <li class="icon">
-          <a href="" class="social-link">
-            <svg width="24" height="24" class="social-icon">
-              <use href="./images/icons.svg#icon-instagram-2"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="icon">
-          <a href="" class="social-link">
-            <svg width="24" height="24" class="social-icon">
-              <use href="./images/icons.svg#icon-twitter-1"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="icon">
-          <a href="" class="social-link">
-            <svg width="24" height="24" class="social-icon">
-              <use href="./images/icons.svg#icon-facebook-1"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="icon">
-          <a href="" class="social-link">
-            <svg width="24" height="24" class="social-icon">
-              <use href="./images/icons.svg#icon-linkedin-1"></use>
-            </svg>
-          </a>
-        </li>
-      </ul>
+      </div>
     </div>
   </body>
 </html>
